overflow from footer solved

--- a/src/core/Footer/Footer.scss
+++ b/src/core/Footer/Footer.scss
@@ -2,14 +2,13 @@
 @import '../../styles/settings/variables.settings';
 
 footer {
-    width: 100%;
+    width: 100vw;
+    height: 100px;
     margin-top: 2rem;;
     background-color: $color-mint;
     color: $color-purple;
     font-family: Montserrat-SemiBold;
-    height: 100px;
     @include flex(center);
-
 }
 
 .rrss {
