--- a/src/core/Header/Header.scss
+++ b/src/core/Header/Header.scss
@@ -44,7 +44,7 @@
         width: 100%;
         position: absolute;
         top: 80px;
-        left: -100%;
+        right: -100%;
         opacity: 0;
         transition: all 0.5s ease;
         flex-direction: column;
